Fix #1. Shows result counts and current index of visible results.

--- a/pagination.css
+++ b/pagination.css
@@ -1,3 +1,7 @@
+.resultCount {
+    color: #808080;
+}
+
 .pagination {
 	text-align: center;
 	margin: 16px 8px 16px 8px;
